# HFT-Core

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang_format.sh  main.cpp
include/: RingBuffer.hpp  SPSC.hpp
test/: CMakeLists.txt  test_rb.cc
